<resources>
	<!-- HELLO WORLD (it has to be here, come on guys) -->
    <string name="hello_world">Hello world!</string>
    
    <!-- APPLICATION -->
    <string name="app_name">Strongbird</string>
    
    <!-- SECTIONS / TABS -->
    <string name="title_section4">Gallery</string>
    <string name="title_section3">Stats</string>
    <string name="title_section2">Home</string>
    <string name="title_section1">Log workout</string>
    

    <!--  WINDOW TITLES -->
    <string name="title_activity_main">Strongbird</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_splash">Strongbird</string>
    
    <!-- ACTION BAR / MENU -->
    <string name="str_menu_settings">Settings</string>
    <string name="str_menu_music">Music</string>
    <string name="str_menu_guide">Guide</string>
    <string name="str_menu_help">Help</string>
    <string name="str_menu_camera">Camera</string>
    
    <!-- MAIN ACTIVITY -->
    <string name="tv_welcomeMessage">Welcome to Strongbird!</string>
    <string name="tv_first">Looking good! This app will help you keep track of your stronglifts workout.</string>
    <string name="front_tv_next">Your next session is:</string>
    <string name="front_tv_x">x</string>
    <string name="front_tv_squats_weight">weight</string>
    <string name="front_tv_squats_sets">sets</string>
    <string name="front_tv_bench_weight">weight</string>
    <string name="front_tv_bench_sets">sets</string>
    <string name="front_tv_ohp_weight">weight</string>
    <string name="front_tv_ohp_sets">sets</string>
    <string name="front_tv_rowing_weight">weight</string>
    <string name="front_tv_rowing_sets">sets</string>
    <string name="front_tv_deadlift_weight">weight</string>
    <string name="front_tv_deadlift_sets">sets</string>

    <!-- LOG WORKOUT ACTIVITY -->
    <string name="tv_log_start">Hello! To start logging, use the checkboxes for the exercises, e.g. if you finished your squats for the day, make sure all five are checked before you press finish.</string>
    <string name="alert_note">Notice</string>
    <string name="alert_sure">Are you sure you wish to log this workout?</string>
    <string name="log_workout_button">Finish logging</string>
    
    <!-- SETTINGS ACTIVITY -->
    <string name="set_main">Settings</string>
    <string name="set_unitMeasure">Units of measurement</string>
    <string name="set_kgLbs">KG or LBS</string>
    <string name="set_kgLbs_summary">Choose which unit of measurement to display weight in</string>
    <string name="set_data">Data</string>
    <string name="set_weightChange">Change weights and sets</string>
    <string name="set_dataReset">Reset Data</string>
    <string name="set_dataReset_summary">Resets user data. This can not be undone!</string>
    <string name="set_dataReset_dialog">Are you sure you want to reset your data?</string>
    <string name="set_squats_summary">Change weight and number of sets for the squat exercise</string>
    <string name="set_benchPress_summary">Change weight and number of sets for the bench press exercise</string>
    <string name="set_rowing_summary">Change weight and number of sets for the rowing exercise</string>
    <string name="set_deadlift_summary">Change weight and number of sets for the deadlift exercise</string>
    <string name="set_ohp_summary">Change weight and number of sets for the overhead press exercise</string>
    <string name="set_weight">Weight</string>
    <string name="set_sets">Sets</string>
    <string name="set_weightIncrements">Change weight increments</string>
    <string name="set_weightIncrementSquats">Change weight increments for the squat exercise</string>
    <string name="set_weightIncrementBenchpress">Change weight increments for the bench press exercise</string>
    <string name="set_weightIncrementRowing">Change weight increments for the rowing exercise</string>
    <string name="set_weightIncrementDeadlift">Change weight increments for the deadlift exercise</string>
    <string name="set_weightIncrementOhp">Change weight increments for the ohp exercise</string>

    <!-- SETTINGS WEIGHT BUTTONS -->
    <string name="set_kg_btn">KG</string>
    <string name="set_lbs_btn">Lbs</string>
    
    <!-- GUIDE ACTIVITY -->
    <string name="guide_tv_video">VIDEO:</string>
    
    <!-- GUIDE ACTIVITY SECTIONS / TABS -->
    <string name="guide_title_section6">Rowing</string>
    <string name="guide_title_section5">Overhead Press</string>
    <string name="guide_title_section4">Deadlift</string>
    <string name="guide_title_section3">Bench Press</string>
    <string name="guide_title_section2">Squats</string>
    <string name="guide_title_section1">Guide</string>
    
    <!-- GALLERY ACTIVITY -->
	<string name="gallery_picture">Picture</string>
    <string name="gallery_select_intro">Long-press a thumbnail to add an image</string>
	<string name="gallery_show_intro">Press a thumbnail to display at larger size</string>
	
	<!-- STATS ACTIVITY -->
	<string name="tv_statsMessage">These are your current stats in the Stronglifts 5x5 program.\nClick the video button to view your latest form recordings.</string>
    
    <!-- EXERCISE NAMES -->
    <string name="ex_squats">Squats</string>
    <string name="ex_benchPress">Bench Press</string>
    <string name="ex_rowing">Rowing</string>
    <string name="ex_deadlift">Deadlift</string>
    <string name="ex_ohp">OHP</string>
    
    <!-- HELP DIALOG -->
    <string name="dialog_close">Close</string>
    <string name="dialog_help0">This is where you log your workout. Click the checkboxes until you get a checkmark (for completed sets) or a cross (for failed sets). Click the Video button by any exercise to record your form in that exercise.</string>
    <string name="dialog_help1">This is the homepage. You can access the functionality of Strongbird by swiping to a side, or by opening the menu. You can use the Camera button and Music button on any page to open your default camera (for taking progress pictures) or media player.</string>
    <string name="dialog_help2">This is where you view statistics for your progress in Stronglifts 5x5. Click the video button to the right to view your last form recording in the exercise of your choice.</string>
    <string name="dialog_help3">This is the gallery. Here you can see the progress pictures you have taken. Press a thumbnail to display the picture, or long-press it to add an image from your own collection.</string>
</resources>