<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/set_unitMeasure"
        android:key="settings_unitMeasure" >
        
        <ListPreference 
            android:id="@+id/settings_kgLbs_id"
            android:title="@string/set_kgLbs"
            android:key="settings_kgLbs"
            android:summary="@string/set_kgLbs_summary"
            android:entries="@array/sa_kgLbs"
            android:entryValues="@array/sa_kgLbsValues" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/set_data"
        android:key="settings_data" >
        
        <no.whg.workout.ResetDataAlertDialog
            android:id="@+id/settings_data_id"
            android:title="@string/set_dataReset"
            android:key="settings_dataReset"
            android:summary="@string/set_dataReset_summary" />
        
    </PreferenceCategory>
</PreferenceScreen>