<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/tab3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	 	
	    <TextView
	    	android:id="@+id/stats_main"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/tv_welcomeMessage"
	        style="@style/style_whiteBox" />	
	    <LinearLayout 
	        android:id="@+id/stats_linearOne"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/stats_main"> 
	        
    	    <TextView
		        android:id="@+id/stats_squats"
		        style="@style/style_whiteBox"
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        android:layout_marginRight="3dp" />
		    
		    <TextView 
		        android:id="@+id/stats_benchPress"
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        android:text="@string/ex_benchPress"
		        style="@style/style_whiteBox"
		        android:layout_marginLeft="3dp" />
	    </LinearLayout>
	    
   	    <LinearLayout 
	        android:id="@+id/stats_linearTwo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/stats_linearOne">
		    
		    <TextView 
		        android:id="@+id/stats_rowing"
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        android:text="@string/ex_rowing"
		        style="@style/style_whiteBox"
		        android:layout_marginRight="3dp" />
		    
		    <TextView 
		        android:id="@+id/stats_deadlift"
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        android:text="@string/ex_deadlift"
		        style="@style/style_whiteBox"
		        android:layout_marginLeft="3dp" />
		</LinearLayout>
	    
   	    <LinearLayout 
	        android:id="@+id/stats_linearThree"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/stats_linearTwo">
   	    
		    <TextView 
		        android:id="@+id/stats_ohp"
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        android:text="@string/ex_ohp"
		        style="@style/style_whiteBox" />
		    
		    <!-- This textview is here to keep the width of the textview over correct -->
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="120dp"
		        android:layout_weight="0.5"
		        style="@style/style_whiteBox" />
	  	</LinearLayout>
	  	
   	    <LinearLayout 
   	        android:id="@+id/stats_linearFour"
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:layout_below="@id/stats_linearThree">
   	        
   	        <TextView 
   	        	android:id="@+id/stats_graphView"
   	        	android:layout_width="fill_parent"
   	        	android:layout_height="150dp"
   	        	style="@style/style_whiteBox"
   	        	android:layout_marginBottom="20dp" />
   	        
   	    </LinearLayout>
	</RelativeLayout>
</ScrollView>